[package]
name = "progrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
colored = "2.0.4"
indicatif = "0.17.7"
libc = { git = "https://github.com/wasix-org/libc", branch = "master" }

